# econdelta

./: .env.example  .gitignore  AGENTS.md  AGENT_LEARNINGS.md  README.md  VISION.md  aggregate_latest.py  backlog.json  datapoints.json  fetch_all.py  indicators.json  parse_all.py  pyproject.toml  requirements-dev.txt  requirements.txt  updated.json
.wolf/: anatomy.md  cerebrum.md  identity.md  memory.md  token-ledger.json
briefing/: __init__.py  __main__.py  anomalies.py  config.py  freshness.py  prompt.py
certs/: dse_sectigo_r36.pem
claude_max/: max_client.py  validators.py
config/: dse_ds30_constituents.json  dse_sector_constituents.json  holidays_2026.json  sources-v2.json  sources-v3.json  sources.json  thresholds.json
db/: README.md  schema.sql
deploy/: README.md  briefing-first-deploy.sh  econdelta-aggregate-retry.timer  econdelta-aggregate.service  econdelta-aggregate.timer  econdelta-auction.service  econdelta-auction.timer  econdelta-briefing.service  econdelta-briefing.timer  econdelta-commodity.service  econdelta-commodity.timer  econdelta-dse-dayend.service  econdelta-dse-dayend.timer  econdelta-dse.service  econdelta-dse.timer  econdelta-fetch.service  econdelta-fetch.timer  econdelta-fiscal-gdp.service  econdelta-fiscal-gdp.timer  econdelta-forex-retry.timer  econdelta-forex.service  econdelta-forex.timer  econdelta-gitpull.service  econdelta-gitpull.timer  econdelta-imf-debt.service  econdelta-imf-debt.timer  econdelta-imf-eff.service  econdelta-imf-eff.timer  econdelta-media-screen.service  econdelta-media-screen.timer  econdelta-parse.service  (+11 more)
(+279 files in other folders)
