[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "econdelta"
version = "0.1.0"
description = "Deterministic scraping pipeline for Bangladesh Bank, DSE, and commodity data"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32,<3",
    "beautifulsoup4>=4.12,<5",
    "pydantic>=2.8,<3",
    "yfinance>=0.2.40,<1",
    "python-dateutil>=2.9,<3",
    "pdfplumber>=0.11,<0.13",
    "playwright>=1.49,<2",
    "playwright-stealth>=2.0,<3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.coverage.run]
source = ["utils", "scrapers", "fetchers", "parsers", "claude_max"]
omit = ["tests/*"]
